- Added music box for Vibrant Horizon