@@ -28,9 +28,8 @@ public class LushWoodHead : ModItem
 
     public override void UpdateArmorSet(Player player)
     {
-        player.setBonus = "+1 flat summon damage\n+1 defense";
+        player.setBonus = "+1 flat summon damage";
         player.GetDamage(DamageClass.Summon).Flat += 1;
-        player.statDefense += 1;
     }
 
     public override void AddRecipes()
